--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -139,7 +139,7 @@ body {
   left: 50%;
   z-index: 2;
   transform: translate(-50%, 50%);
-  background: #8f6ed5 url("r.jpg") center center no-repeat;
+  background: #8f6ed5 url("pfp.jpg");
   background-size: cover;
   border-radius: 50%;
   box-shadow: 0 15px 35px rgba(50,50,93,0.1), 0 5px 15px rgba(0,0,0,0.07);
@@ -399,6 +399,7 @@ body {
   z-index: 1;
 }
 .profile-page .bg div {
+  border-radius: 50px;
   content: "";
   width: 100%;
   height: 100%;
