--- a/templates/login/sign.html
+++ b/templates/login/sign.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Login Form</title>
+    <title>Sign Up - Store</title>
     <link rel="stylesheet" href="../../static/css/login.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     {% for msg in messages %}
-                      <h5 class="title"> {{msg}} </h5>  
+                        <h5 class="title">{{ msg }}</h5>  
                     {% endfor %}
                 {% endif %}
             {% endwith %}
@@ -22,14 +22,14 @@
             <div class="input-container">
                 <input type="text" placeholder="Username" required name="username"> 
                 <input type="password" placeholder="Create Password" required name="password">
-                <input type="text" placeholder="describe yourself" required name="description"> 
+                <input type="text" placeholder="Describe Yourself" required name="description"> 
             </div> 
             <div class="botton">
                 <button class="submit" type="submit">SIGN UP</button> 
             </div>  
         </form>
         <div class="signup">
-             Already Have An Account?<a href="/login"> log In</a>  
+            Already have an account? <a href="/login">Login</a>  
         </div>
     </div>
 </body>
